# bloom_filter_elixir

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  mix.exs
.github/workflows/: release.yml
lib/: bloom_filter.ex
lib/bloom_filter/: native.ex
native/bloomfilternif/: Cargo.toml
native/bloomfilternif/.cargo/: config.toml
native/bloomfilternif/src/: lib.rs
test/: bloom_filter_test.exs
